--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "servertest-api-tests-full",
   "scripts": {
-    "test": "cucumber-js --format json:cucumber_report.json --publish-quiet",
+    "test": "npx cucumber-js --format json:cucumber_report.json --publish-quiet",
     "report": "node generate-report.js"
   },
   "devDependencies": {
@@ -11,3 +11,4 @@
     "pactum": "^3.4.0"
   }
 }
+
