--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: Verificar cucumber-js
+        run: ls -la node_modules/.bin/cucumber-js
+
       - name: Rodar testes BDD
         run: npm test
 
