ajuste da pipeline de teste

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: Dar permissão de execução ao cucumber-js
+        run: chmod +x node_modules/.bin/cucumber-js
+
       - name: Rodar testes BDD
         run: npm test
 
@@ -33,6 +36,3 @@ jobs:
         with:
           name: cucumber-html-report
           path: cucumber_report.html
-
-      - name: Garantir permissão de execução
-        run: chmod +x node_modules/.bin/cucumber-js
