--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: Dar permissão de execução ao cucumber-js
+        run: chmod +x node_modules/.bin/cucumber-js
+
       - name: Rodar testes BDD
         run: npx cucumber-js --format progress --format json:cucumber_report.json
 
