--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@
 hs_err_pid*
 replay_pid*
 cucumber_report.json
+# Node.js
+node_modules/
+npm-debug.log*
+package-lock.json
+.env
+dist/
+coverage/
+build/
