Chore: ignore generated HTML reports
- Stop tracking the generated HTML report under reports/.
- Ignore reports/ and cucumber_report.html to avoid committing generated output.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@
 hs_err_pid*
 replay_pid*
 cucumber_report.json
+cucumber_report.html
+
+# Generated HTML reports
+reports/
 # Node.js
 node_modules/
 npm-debug.log*
